[package]
name = "nes"
version = "0.1.0"
edition = "2021"
default-run = "nes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

log_memory = []
log_to_file = []
log_disk = []
log_prodos = []
minifb = []

[dependencies]
cpu = { path = "../cpu" }

iced_futures = "0.13.0"
iced = {  version = "0.13.0", features = [ "canvas", "tokio" ] }
tokio = {  version = "1.38.0", features = [ "macros", "sync", "rt-multi-thread" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"
rolling-file = "0.2.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
minifb = "0.28.0"
once_cell = "1.19.0"
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
rand = "0.8.5"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive" ] }
serde_derive = { version = "1.0.210" }
confy = "1.0.0"
serde_json = "1.0.128"
enum_dispatch = "0.3.13"
regex = "1.10.6"
rodio = "0.22.2"